# PiDLidar

./: CMakeLists.txt  README.md  setup.py
python/: .gui.py.swn  .gui.py.swo  gui.py  main.py  profileGui.py  profileMainThread  profileReportWithPyQtGraph.txt  profileWorkerThread  worker.py
src/: wrapYDLidar.cpp
